# parsing_vacancy_hh_ru

./: README.md  config.py  main.py  pyproject.toml
data/: result.json  vacancies.json
src/: api.py  downloader.py  env.py  hh_api.py  operations_on_vacancies.py  req_params.py  save_vacancies.py  uploader.py  user.py  user_interface.py  vacancy.py
tests/: conftest.py  index.html  test_api.py  test_hh_api.py  test_operations_on_vacancies.py  test_req_params.py  test_save_vacancies.py  test_user.py  test_vacancy.py
