[tool.poetry]
name = "parsing-vacancy-hh-ru"
version = "0.1.0"
description = ""
authors = ["Dmitry_Bezgubov <dmitrij-bezgubov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
config = "^0.5.1"
python-dotenv = "^1.0.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
coverage = "^7.6.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

